--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    // "ignoreDeprecations": "6.0",
     "lib": [
       "es2020",
       "dom"
